--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@babel/preset-react": "^7.12.13",
+        "@inertiajs/inertia": "^0.8.5",
+        "@inertiajs/inertia-vue3": "^0.3.5",
+        "@inertiajs/progress": "^0.2.4",
+        "@tailwindcss/forms": "^0.2.1",
+        "@types/react-helmet": "^6.1.0",
         "axios": "^0.21",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
