--- a/package.json
+++ b/package.json
@@ -15,10 +15,20 @@
         "@inertiajs/inertia-vue3": "^0.3.5",
         "@inertiajs/progress": "^0.2.4",
         "@tailwindcss/forms": "^0.2.1",
+        "@types/react-dom": "^17.0.1",
         "@types/react-helmet": "^6.1.0",
         "axios": "^0.21",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.1.14",
+        "ts-loader": "^8.0.17",
+        "typescript": "^4.2.2"
+    },
+    "dependencies": {
+        "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+        "@inertiajs/inertia-react": "^0.5.4",
+        "@types/react": "^17.0.2",
+        "react": "^17.0.1",
+        "react-dom": "^17.0.1"
     }
 }
