--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
         "@tailwindcss/forms": "^0.2.1",
         "@types/react-dom": "^17.0.1",
         "@types/react-helmet": "^6.1.0",
+        "autoprefixer": "^10.2.4",
         "axios": "^0.21",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
+        "postcss": "^8.2.7",
+        "tailwindcss": "^2.0.3",
         "ts-loader": "^8.0.17",
         "typescript": "^4.2.2"
     },
@@ -29,6 +31,7 @@
         "@inertiajs/inertia-react": "^0.5.4",
         "@types/react": "^17.0.2",
         "react": "^17.0.1",
-        "react-dom": "^17.0.1"
+        "react-dom": "^17.0.1",
+        "react-helmet": "^6.1.0"
     }
 }
