--- a/package.json
+++ b/package.json
@@ -53,8 +53,8 @@
         "react-datepicker": "^3.6.0",
         "react-dom": "^17.0.1",
         "react-helmet": "^6.1.0",
-        "react-icons": "^4.2.0",
         "react-input-mask": "^2.0.4",
+        "react-modal": "^3.12.1",
         "react-number-format": "^4.5.0",
         "react-select": "^4.2.1",
         "react-table": "^7.6.3",
