--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.2.7",
+        "react-toastify": "^7.0.4",
         "tailwindcss": "^2.0.3",
         "ts-loader": "^8.0.17",
         "typescript": "^4.2.2"
